(lang dune 3.11)

(name osaka)

(source
 (github bmoxb/osaka))

(authors "bmoxb")

(maintainers "bmoxb")

(license MIT)

(documentation https://github.com/bmoxb/osaka)

(package
 (name osaka)
 (synopsis "An imperative programming language with a novel substructural type system")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
