(lang dune 3.11)

(name frog)

(source
 (github bmoxb/frog))

(authors "bmoxb")

(maintainers "bmoxb")

(license MIT)

(documentation https://github.com/bmoxb/frog)

(package
 (name frog)
 (synopsis "An experimental functional programming language.")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
